--- a/showduino_tools.html
+++ b/showduino_tools.html
@@ -58,7 +58,7 @@
         <h2 class="text-2xl font-bold mb-2">ESP32 Dev Board</h2>
         <img src="https://m.media-amazon.com/images/I/61jN2wY1jML._AC_SL1500_.jpg" alt="ESP32 Dev Board" class="mb-4 rounded-lg w-full">
         <p class="text-gray-400 mb-4">The haunted heart of Showduino. Dual-core, WiFi, Bluetooth—what more could a monster ask for?</p>
-        <a href="https://www.amazon.co.uk/dp/B08246MCL2?tag=yourtaghere-21" target="_blank" class="bg-red-600 hover:bg-red-700 text-white py-2 px-4 rounded">Get it on Amazon</a>
+        <a href="https://www.amazon.co.uk/dp/B08246MCL2?tag=showduino-21" target="_blank" class="bg-red-600 hover:bg-red-700 text-white py-2 px-4 rounded">Get it on Amazon</a>
       </div>
 
       <!-- Tool Card 2 -->
@@ -66,7 +66,7 @@
         <h2 class="text-2xl font-bold mb-2">HC-05 Bluetooth Module</h2>
         <img src="https://m.media-amazon.com/images/I/61T1cyLx9JL._AC_SL1001_.jpg" alt="HC-05 Bluetooth Module" class="mb-4 rounded-lg w-full">
         <p class="text-gray-400 mb-4">Summon wireless serial magic from your phone straight into your props—Bluetooth that bites.</p>
-        <a href="https://www.amazon.co.uk/dp/B00INWZRNC?tag=yourtaghere-21" target="_blank" class="bg-red-600 hover:bg-red-700 text-white py-2 px-4 rounded">Get it on Amazon</a>
+        <a href="https://www.amazon.co.uk/dp/B00INWZRNC?tag=showduino-21" target="_blank" class="bg-red-600 hover:bg-red-700 text-white py-2 px-4 rounded">Get it on Amazon</a>
       </div>
 
       <!-- Tool Card 3 -->
@@ -74,7 +74,7 @@
         <h2 class="text-2xl font-bold mb-2">NeoPixel Jewel (7 RGB LEDs)</h2>
         <img src="https://m.media-amazon.com/images/I/71KHvJk7SDL._AC_SL1500_.jpg" alt="NeoPixel Jewel" class="mb-4 rounded-lg w-full">
         <p class="text-gray-400 mb-4">This little jewel packs a wicked punch. Perfect for haunted lanterns, eerie glow effects, and magical runes.</p>
-        <a href="https://www.amazon.co.uk/dp/B01DC0KITW?tag=yourtaghere-21" target="_blank" class="bg-red-600 hover:bg-red-700 text-white py-2 px-4 rounded">Get it on Amazon</a>
+        <a href="https://www.amazon.co.uk/dp/B01DC0KITW?tag=showduino-21" target="_blank" class="bg-red-600 hover:bg-red-700 text-white py-2 px-4 rounded">Get it on Amazon</a>
       </div>
 
       <!-- Tool Card 4 -->
@@ -82,7 +82,7 @@
         <h2 class="text-2xl font-bold mb-2">Serial MP3 Player Module</h2>
         <img src="https://m.media-amazon.com/images/I/51XK1vwiL0L._AC_SL1001_.jpg" alt="MP3 Player Module" class="mb-4 rounded-lg w-full">
         <p class="text-gray-400 mb-4">Because what's a haunt without screams? Add chilling soundscapes to your creations with this creepy compact sound module.</p>
-        <a href="https://www.amazon.co.uk/dp/B07R8BZMLD?tag=yourtaghere-21" target="_blank" class="bg-red-600 hover:bg-red-700 text-white py-2 px-4 rounded">Get it on Amazon</a>
+        <a href="https://www.amazon.co.uk/dp/B07R8BZMLD?tag=showduino-21" target="_blank" class="bg-red-600 hover:bg-red-700 text-white py-2 px-4 rounded">Get it on Amazon</a>
       </div>
 
     </div>
